test/scc/stmt/semantic-errors/016.t
void test()
{
    struct { int x; } a;
    if (a)
        ;
}